# kyarameru-tool-box

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rules.md
.github/workflows/: tests.yml
ai_log/: 2026-03-24.md
docs/: harness-plan.md  pr-template.md  work-notes.md
scripts/: create-pr.sh  harness.sh  install.py  policy-check.sh
tests/: test_install.py
toolbox/: AGENTS.md
toolbox/hooks/: preflight.sh
toolbox/skills/agents-md-writer/: SKILL.md
toolbox/skills/agents-md-writer/references/: agents-best-practices.md
toolbox/skills/agents-md-writer/scripts/: check_agents_md.sh
toolbox/skills/git-pr-worker/: SKILL.md
toolbox/skills/git-pr-worker/references/: git-pr-best-practices.md
toolbox/skills/git-pr-worker/scripts/: pr_precheck.sh
toolbox/skills/mcp-worker/: SKILL.md
toolbox/skills/plan-worker/: SKILL.md
