[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyarameru-tool-box"
version = "0.1.0"
description = "Personal Codex toolbox installer"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
